--- a/web/template.xhtml
+++ b/web/template.xhtml
@@ -106,7 +106,7 @@
 
         <p:layout fullPage="false">
 
-            <div class="content-wrapper">
+            <div class="content-wrapper-mine">
                 <div>
                     <p:layoutUnit position="center" >
                         <ui:insert name="body"/>
