--- a/web/Vistas/errors/errorPage.xhtml
+++ b/web/Vistas/errors/errorPage.xhtml
@@ -1,14 +1,13 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:head>
-        <title>Error</title>
-        
+        <title>Error de Base de datos</title>
     </h:head>
     <h:body>
-        <h1>este es del template</h1>
+        <strong>Error de base de datos</strong>
+        <%=exception.getMessage()%>
     </h:body>
 </html>
 
