--- a/web/template.xhtml
+++ b/web/template.xhtml
@@ -121,7 +121,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        &copy; 2016 Regimp | Todos los derechos reservados                       
+                        &copy; 2016 Zeitgim | Todos los derechos reservados                       
                     </div>
                 </div>
             </div>
