--- a/web/Vistas/suscripcion/List.xhtml
+++ b/web/Vistas/suscripcion/List.xhtml
@@ -66,15 +66,15 @@
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListSuscripcionTitle_estado}"/>
+                                <h:outputText value="Dias Restantes"/>
                             </f:facet>
-                            <p:selectBooleanCheckbox value="#{item.estado}" disabled="true"/>
+                            <h:outputText value="#{suscripcionController.diasRestantes}"/>
                         </p:column>
 
                         <f:facet name="footer">
                             <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{suscripcionController.prepareCreate}" update=":SuscripcionCreateForm" oncomplete="PF('SuscripcionCreateDialog').show()"/>
                             <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{bundle.View}" update=":SuscripcionViewForm" oncomplete="PF('SuscripcionViewDialog').show()" disabled="#{empty suscripcionController.selected}"/>
-                            <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{bundle.Edit}" update=":SuscripcionEditForm" oncomplete="PF('SuscripcionEditDialog').show()" disabled="#{empty suscripcionController.selected}"/>
+                            <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{bundle.Edit}" update=":SuscripcionEditForm" oncomplete="PF('SuscripcionEditDialog').show()" disabled="true"/>
                             <p:commandButton id="deleteButton" icon="ui-icon-trash"  value="#{bundle.Delete}" actionListener="#{suscripcionController.destroy}" update=":growl,datalist" disabled="#{empty suscripcionController.selected}">
                                 <p:confirm message="Esta seguro de eliminar la suscripcion de #{suscripcionController.selected.clienteIdCliente.nombres} #{suscripcionController.selected.clienteIdCliente.apellidos}?" icon="ui-icon-alert"/>
                             </p:commandButton>
