--- a/web/Vistas/cliente/Create.xhtml
+++ b/web/Vistas/cliente/Create.xhtml
@@ -9,64 +9,66 @@
     <ui:composition>
 
         <p:dialog id="ClienteCreateDlg" widgetVar="ClienteCreateDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.CreateClienteTitle}">
-            <h:form id="ClienteCreateForm" enctype="multipart/form-data">
-                <input type="hidden" value="#{clienteController.fechaActual}"></input>
-                <h:panelGroup id="display" >
-                    <p:fieldset>
+            <p:cache region="testcache" key="toolbar">
+                <h:form id="ClienteCreateForm" enctype="multipart/form-data">
+                    <input type="hidden" value="#{clienteController.fechaActual}"></input>
+                    <h:panelGroup id="display" >
+                        <p:fieldset>
 
-                        <p:panelGrid columns="3">
-                            <p:outputLabel value="#{bundle.CreateClienteLabel_foto}" for="fileImagenCliente"/>
-                            <p:fileUpload id="fileImagenCliente" mode="advanced" fileUploadListener="#{clienteController.subirImagen}" 
-                                          label="Elegir"  
-                                          update="ICliente, :growl" 
-                                          sizeLimit="512000"
-                                          invalidSizeMessage="Tamaño de imagen excedido (Max: 512Kb)!"
-                                          auto="true"
-                                          allowTypes="/(\.|\/)(gif|jpe?g|png)$/"
-                                          invalidFileMessage="Archivo invalido, solo se permiten imágenes!"/>
-                            <p:graphicImage id="ICliente" value="#{clienteController.imagenCliente}" width="150" height="120"/>
-                        </p:panelGrid>
-                        <br></br> 
-                        <p:panelGrid columns="2" rendered="#{clienteController.selected != null}">
-                            <p:outputLabel value="#{bundle.CreateClienteLabel_nombres}" for="nombres" />
-                            <p:inputText id="nombres" value="#{clienteController.selected.nombres}" title="#{bundle.CreateClienteTitle_nombres}" required="true" requiredMessage="#{bundle.CreateClienteRequiredMessage_nombres}"/>
-                            <p:outputLabel value="#{bundle.CreateClienteLabel_apellidos}" for="apellidos" />
-                            <p:inputText id="apellidos" value="#{clienteController.selected.apellidos}" title="#{bundle.CreateClienteTitle_apellidos}" required="true" requiredMessage="#{bundle.CreateClienteRequiredMessage_apellidos}"/>
-                            <p:outputLabel value="#{bundle.CreateClienteLabel_terminoSuscripcion}" for="terminoSuscripcion" />
-                            <p:selectOneMenu id="terminoSuscripcion" value="#{clienteController.selected.terminoSuscripcion}" required="true" requiredMessage="#{bundle.EditSuscripcionRequiredMessage_clienteIdCliente}">
-                                <p:ajax listener="#{clienteController.fechaFinal}" update="fechaFin" />
-                                <f:selectItem itemLabel="Seleccione" itemValue="" />
-                                <f:selectItem itemLabel="Un Mes" itemValue="Un Mes" />
-                                <f:selectItem itemLabel="Dos Meses" itemValue="Dos Meses" />
-                                <f:selectItem itemLabel="Tres Meses" itemValue="Tres Meses" />
-                                <f:selectItem itemLabel="Seis Meses" itemValue="Seis Meses" />
-                            </p:selectOneMenu>
-                            <p:outputLabel value="#{bundle.CreateClienteLabel_identificacion}" for="identificacion" />
-                            <p:inputText id="identificacion" accesskey="true" value="#{clienteController.selected.identificacion}" title="#{bundle.CreateClienteTitle_identificacion}" required="true"  requiredMessage="#{bundle.CreateClienteRequiredMessage_identificacion}"/>
-                            <p:outputLabel value="#{bundle.CreateClienteLabel_direccion}" for="direccion" />
-                            <p:inputText id="direccion" value="#{clienteController.selected.direccion}" title="#{bundle.CreateClienteTitle_direccion}" required="true" requiredMessage="#{bundle.CreateClienteRequiredMessage_direccion}"/>
-                            <p:outputLabel value="#{bundle.CreateClienteLabel_telefono}" for="telefono" />
-                            <p:inputText id="telefono" value="#{clienteController.selected.telefono}"  title="#{bundle.CreateClienteTitle_telefono}" required="true" requiredMessage="#{bundle.CreateClienteRequiredMessage_telefono}"/>
-                        </p:panelGrid> 
-                    </p:fieldset>
+                            <p:panelGrid columns="3">
+                                <p:outputLabel value="#{bundle.CreateClienteLabel_foto}" for="fileImagenCliente"/>
+                                <p:fileUpload id="fileImagenCliente" mode="advanced" fileUploadListener="#{clienteController.subirImagen}" 
+                                              label="Elegir"  
+                                              update="ICliente, :growl" 
+                                              sizeLimit="512000"
+                                              invalidSizeMessage="Tamaño de imagen excedido (Max: 512Kb)!"
+                                              auto="true"
+                                              allowTypes="/(\.|\/)(gif|jpe?g|png)$/"
+                                              invalidFileMessage="Archivo invalido, solo se permiten imágenes!"/>
+                                <p:graphicImage id="ICliente" value="#{clienteController.imagenCliente}" width="150" height="120"/>
+                            </p:panelGrid>
+                            <br></br> 
+                            <p:panelGrid columns="2" rendered="#{clienteController.selected != null}">
+                                <p:outputLabel value="#{bundle.CreateClienteLabel_nombres}" for="nombres" />
+                                <p:inputText id="nombres" value="#{clienteController.selected.nombres}" title="#{bundle.CreateClienteTitle_nombres}" required="true" requiredMessage="#{bundle.CreateClienteRequiredMessage_nombres}"/>
+                                <p:outputLabel value="#{bundle.CreateClienteLabel_apellidos}" for="apellidos" />
+                                <p:inputText id="apellidos" value="#{clienteController.selected.apellidos}" title="#{bundle.CreateClienteTitle_apellidos}" required="true" requiredMessage="#{bundle.CreateClienteRequiredMessage_apellidos}"/>
+                                <p:outputLabel value="#{bundle.CreateClienteLabel_terminoSuscripcion}" for="terminoSuscripcion" />
+                                <p:selectOneMenu id="terminoSuscripcion" value="#{clienteController.selected.terminoSuscripcion}" required="true" requiredMessage="#{bundle.EditSuscripcionRequiredMessage_clienteIdCliente}">
+                                    <p:ajax listener="#{clienteController.fechaFinal}" update="fechaFin" />
+                                    <f:selectItem itemLabel="Seleccione" itemValue="" />
+                                    <f:selectItem itemLabel="Un Mes" itemValue="Un Mes" />
+                                    <f:selectItem itemLabel="Dos Meses" itemValue="Dos Meses" />
+                                    <f:selectItem itemLabel="Tres Meses" itemValue="Tres Meses" />
+                                    <f:selectItem itemLabel="Seis Meses" itemValue="Seis Meses" />
+                                </p:selectOneMenu>
+                                <p:outputLabel value="#{bundle.CreateClienteLabel_identificacion}" for="identificacion" />
+                                <p:inputText id="identificacion" accesskey="true" value="#{clienteController.selected.identificacion}" title="#{bundle.CreateClienteTitle_identificacion}" required="true"  requiredMessage="#{bundle.CreateClienteRequiredMessage_identificacion}"/>
+                                <p:outputLabel value="#{bundle.CreateClienteLabel_direccion}" for="direccion" />
+                                <p:inputText id="direccion" value="#{clienteController.selected.direccion}" title="#{bundle.CreateClienteTitle_direccion}" required="true" requiredMessage="#{bundle.CreateClienteRequiredMessage_direccion}"/>
+                                <p:outputLabel value="#{bundle.CreateClienteLabel_telefono}" for="telefono" />
+                                <p:inputText id="telefono" value="#{clienteController.selected.telefono}"  title="#{bundle.CreateClienteTitle_telefono}" required="true" requiredMessage="#{bundle.CreateClienteRequiredMessage_telefono}"/>
+                            </p:panelGrid> 
+                        </p:fieldset>
 
-                    <p:fieldset > 
-                        <p:panelGrid columns="2"> 
-                            <p:outputLabel value="#{bundle.CreateSuscripcionLabel_fechaInicio}" />
-                            <p:calendar id="fechaInicio" pattern="yyyy-MM-dd" value="#{clienteController.nuevasuscripcion.fechaInicio}" title="#{bundle.EditSuscripcionTitle_fechaInicio}" navigator="true" showOn="button" readonlyInput="true" effect="fold" locale="es">
-                                <p:ajax event="dateSelect" listener="#{clienteController.fechaFinal}" update="fechaFin" />
-                            </p:calendar>               
-                            <p:outputLabel value="#{bundle.CreateSuscripcionLabel_fechaFin}" />
-                            <p:calendar id="fechaFin" pattern="yyyy-MM-dd" value="#{clienteController.nuevasuscripcion.fechaFin}" navigator="true" mindate="#{clienteController.nuevasuscripcion.fechaInicio}" readonlyInput="true" showOn="button" effect="fold" locale="es"></p:calendar> 
-                        </p:panelGrid>
-                    </p:fieldset> 
+                        <p:fieldset > 
+                            <p:panelGrid columns="2"> 
+                                <p:outputLabel value="#{bundle.CreateSuscripcionLabel_fechaInicio}" />
+                                <p:calendar id="fechaInicio" pattern="yyyy-MM-dd" value="#{clienteController.nuevasuscripcion.fechaInicio}" title="#{bundle.EditSuscripcionTitle_fechaInicio}" navigator="true" showOn="button" readonlyInput="true" effect="fold" locale="es">
+                                    <p:ajax event="dateSelect" listener="#{clienteController.fechaFinal}" update="fechaFin" />
+                                </p:calendar>               
+                                <p:outputLabel value="#{bundle.CreateSuscripcionLabel_fechaFin}" />
+                                <p:calendar id="fechaFin" pattern="yyyy-MM-dd" value="#{clienteController.nuevasuscripcion.fechaFin}" navigator="true" mindate="#{clienteController.nuevasuscripcion.fechaInicio}" readonlyInput="true" showOn="button" effect="fold" locale="es"></p:calendar> 
+                            </p:panelGrid>
+                        </p:fieldset> 
 
-                    <p:commandButton actionListener="#{clienteController.crear()}" value="#{bundle.Save}" update="display,:ClienteListForm:datalist,:growl" oncomplete="handleSubmit(args,'ClienteCreateDialog');">
-                        <p:confirm header="Cofirmación" message="Esta seguro que los datos son correctos?" icon="ui-icon-alert" />
-                    </p:commandButton>
-                    <p:commandButton value="#{bundle.Cancel}" onclick="ClienteCreateDialog.hide()"/>
-                </h:panelGroup>
-            </h:form>
+                        <p:commandButton actionListener="#{clienteController.crear()}" value="#{bundle.Save}" update="display,:ClienteListForm:datalist,:growl" oncomplete="handleSubmit(args,'ClienteCreateDialog');">
+                            <p:confirm header="Cofirmación" message="Esta seguro que los datos son correctos?" icon="ui-icon-alert" />
+                        </p:commandButton>
+                        <p:commandButton value="#{bundle.Cancel}" onclick="ClienteCreateDialog.hide()"/>
+                    </h:panelGroup>
+                </h:form>
+            </p:cache>
         </p:dialog>
 
     </ui:composition>
