--- a/web/Vistas/usuario/Create.xhtml
+++ b/web/Vistas/usuario/Create.xhtml
@@ -9,7 +9,7 @@
     <ui:composition>
 
         <p:dialog id="UsuarioCreateDlg" widgetVar="UsuarioCreateDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.CreateUsuarioTitle}">
-
+            <p:cache>
             <h:form id="UsuarioCreateForm">
                 <h:panelGroup id="display">
 
@@ -36,7 +36,7 @@
                     <p:commandButton value="#{bundle.Cancel}" onclick="UsuarioCreateDialog.hide()"/>
                 </h:panelGroup>
             </h:form>
-
+                </p:cache>
         </p:dialog>
 
     </ui:composition>
