--- a/web/Vistas/suscripcion/List.xhtml
+++ b/web/Vistas/suscripcion/List.xhtml
@@ -22,6 +22,7 @@
                                  rowKey="#{item.idSuscripcion}"
                                  rows="10"
                                  rowsPerPageTemplate="10,20,30,40,50"
+                                 emptyMessage="#{bundle.ListSuscripcionEmpty}"
                                  >
 
                         <p:ajax event="rowSelect"   update="createButton viewButton editButton deleteButton"/>
@@ -64,12 +65,12 @@
                                 <f:convertDateTime pattern="yyyy-MM-dd" />
                             </h:outputText>
                         </p:column>
-                        <p:column>
+                        <!--<p:column>
                             <f:facet name="header">
                                 <h:outputText value="Dias Restantes"/>
                             </f:facet>
-                            <h:outputText value="#{suscripcionController.diasRestantes}"/>
-                        </p:column>
+                            <h:outputText value="#{suscripcionController.diasRestantes(item.fechaFin)}"/>
+                        </p:column>-->
 
                         <f:facet name="footer">
                             <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{suscripcionController.prepareCreate}" update=":SuscripcionCreateForm" oncomplete="PF('SuscripcionCreateDialog').show()"/>
@@ -82,6 +83,8 @@
                                 <p:commandButton value="Si" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
                                 <p:commandButton value="No" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
                             </p:confirmDialog>
+                            <p:commandButton id="updateButton"   icon="ui-icon-pencil" value="Actualizar!" update=":SuscripcionEditForm" actionListener="#{suscripcionController.actualizarTablas()}"/>
+                            
                         </f:facet>
                     </p:dataTable>
                 </p:panel>
