--- a/web/Vistas/cliente/List.xhtml
+++ b/web/Vistas/cliente/List.xhtml
@@ -22,6 +22,7 @@
                                  rowKey="#{item.idCliente}"
                                  rows="10"
                                  rowsPerPageTemplate="10,20,30,40,50"
+                                 emptyMessage="#{bundle.ListClienteEmpty}"
                                  >
 
                         <p:ajax event="rowSelect"   update="createButton viewButton editButton deleteButton"/>
