--- a/web/Login.xhtml
+++ b/web/Login.xhtml
@@ -82,7 +82,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        &copy; 2016 Regimp | Todos los derechos reservados
+                        &copy; 2016 Zeitgimp | Todos los derechos reservados
                     </div>
 
                 </div>
