--- a/web/Vistas/errors/errorCorreo.xhtml
+++ b/web/Vistas/errors/errorCorreo.xhtml
@@ -3,10 +3,107 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:head>
-        <title>Facelet Title</title>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <!--[if IE]>
+            <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+            <![endif]-->
+        <title>Error de base de datos</title>
+        <!-- BOOTSTRAP CORE STYLE  -->
+        <link href="../../resources/assets/css/bootstrap.css" rel="stylesheet" />
+        <!-- FONT AWESOME ICONS  -->
+        <link href="../../resources/assets/css/font-awesome.css" rel="stylesheet" />
+        <!-- CUSTOM STYLE  -->
+        <link href="../../resources/assets/css/style.css" rel="stylesheet" />
+        <!-- HTML5 Shiv and Respond.js for IE8 support of HTML5 elements and media queries -->
+        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+        <!--[if lt IE 9]>
+            <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+            <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+        <![endif]-->
     </h:head>
     <h:body>
-        error al enviar correo
+        <header>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <strong>Email: </strong>regimpequipo@outlook.com
+                        &nbsp;&nbsp;
+                        <strong>Support: </strong>312 666 0674
+                    </div>
+
+                </div>
+            </div>
+        </header>
+        <!-- HEADER END-->
+        <div class="navbar navbar-inverse set-radius-zero">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+
+
+                </div>
+
+            </div>
+        </div>
+        <!-- LOGO HEADER END-->
+        <section class="menu-section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="navbar-collapse collapse ">
+                            <ul id="menu-top" class="nav navbar-nav navbar-right">
+                                <li><a class="menu-top-active" href="index.html">Dashboard</a></li>
+                            </ul>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <!-- MENU SECTION END-->
+
+        <div class="content-wrapper">
+            <div class="container">
+                <div class="row">
+                    
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h4 class="page-head-line">Lo Sentimos!</h4>
+                        </div>
+                    </div>
+                    
+                    <div class="col-md-12">
+                        <div class="alert alert-danger">
+                            Error al enviar el correo, compruebe su conexion a internet y vuelva a intentarlo
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+       <!-- CONTENT-WRAPPER SECTION END-->
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        &copy; 2016 Zeitgim | Todos los derechos reservados
+                    </div>
+
+                </div>
+            </div>
+        </footer>
+        <!-- FOOTER SECTION END-->
+        <!-- JAVASCRIPT AT THE BOTTOM TO REDUCE THE LOADING TIME  -->
+        <!-- CORE JQUERY SCRIPTS -->
+        <script src="resources/assets/js/jquery-1.11.1.js"></script>
+        <!-- BOOTSTRAP SCRIPTS  -->
+        <script src="resources/assets/js/bootstrap.js"></script>
     </h:body>
 </html>
-
