--- a/web/Login.xhtml
+++ b/web/Login.xhtml
@@ -31,7 +31,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <strong>Email: </strong>regimpequipo@outlook.com
+                        <strong>Email: </strong>zitgimequipo@outlook.com
                         &nbsp;&nbsp;
                         <strong>Support: </strong>312 666 0674
                     </div>
